# mycmakecourse

./: .gitignore  CMakeLists.txt  License.txt
myapp/: .gitignore  CMakeLists.txt
myapp/src/: main.cpp
mylibrary/: CMakeLists.txt  mylibraryConfig.cmake.in
mylibrary/include/mylibrary/: configuration.h.in  mylibrary.h
mylibrary/src/: fibonacci.cpp  mylibrary.cpp
